sftpgo/sftpgo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sftpgo-deployment
  namespace: homeserver
spec:
  replicas: 1

  selector:
    matchLabels:
      app: sftpgo
  
  template:
    metadata:
      labels:
        app: sftpgo
    
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
      
      containers:
        - name: sftpgo
          image: registry.sftpgo.com/sftpgo/sftpgo:v2.7.20260307
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 8080
            - containerPort: 2022
            - containerPort: 8090

          volumeMounts:
            - name: config
              mountPath: /var/lib/sftpgo

            - name: data
              mountPath: /srv/sftpgo
      
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: sftpgo-pvc-config

        - name: data
          hostPath:
            path: /mnt/storage/sftpgo
            type: Directory
