sftpgo/sftpgo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sftpgo
  namespace: homeserver
spec:
  selector:
    app: sftpgo
  
  ports:
    - name: http
      port: 8080
      targetPort: 8080

    - name: ssh
      port: 2022
      targetPort: 2022

    - name: app
      port: 8090
      targetPort: 8090
  
  type: ClusterIP
