sftpgo/sftpgo-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sftpgo
  namespace: homeserver

spec:
  parentRefs:
  - name: homeserver

  hostnames:
  - sftpgo.homeserver.local

  rules:
  - backendRefs:
    - name: sftpgo
      port: 8080
